# wild-api

./: .gitignore  .template.env  Dockerfile  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_01_22_1951-5bb08a245542_v1_0_0.py
src/: __init__.py  config.py  constants.py  database.py  events.py  main.py
src/auth/: constants.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py  utils.py
src/products/: constants.py  crud.py  exceptions.py  models.py  router.py  schemas.py  service.py  types.py
src/users/: constants.py  dependencies.py  exceptions.py  models.py  schemas.py  service.py  utils.py
